--- a/index.html
+++ b/index.html
@@ -70,5 +70,18 @@
     &copy; 2025 Franswoosh!
   </footer>
 </body>
-  <a href="2index.html">View my new page</a>
+<a href="2index.html" style="
+  display: inline-block;
+  background-color: #fce5cd;
+  color: #7b4b35;
+  padding: 0.5rem 1.2rem;
+  border-radius: 12px;
+  text-decoration: none;
+  font-family: 'Georgia', serif;
+  font-weight: bold;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
+  transition: background-color 0.3s ease;
+" onmouseover="this.style.backgroundColor='#ffe6d0'" onmouseout="this.style.backgroundColor='#fce5cd'">
+  ✨ Poems ✨
+</a>
 </html>
