--- a/2index.html
+++ b/2index.html
@@ -5,70 +5,91 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Graceful Verses</title>
   <style>
+    :root {
+      --bg: #ffffff;
+      --text: #222222;
+      --accent: #888888;
+      --border: #dddddd;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
-      background-color: #fff8f2;
-      color: #5a3e36;
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
     }
 
     header {
-      background-color: #fce5cd;
-      padding: 2rem;
+      border-bottom: 1px solid var(--border);
+      padding: 2rem 1rem;
       text-align: center;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     header h1 {
       margin: 0;
       font-size: 2.5rem;
-      color: #7b4b35;
+      font-weight: 600;
     }
 
     nav {
-      margin-top: 1rem;
+      margin-top: 0.5rem;
     }
 
     nav a {
       margin: 0 1rem;
       text-decoration: none;
-      color: #7b4b35;
-      font-weight: bold;
+      color: var(--accent);
+      font-weight: 500;
+      transition: color 0.2s ease;
+    }
+
+    nav a:hover {
+      color: var(--text);
     }
 
     .container {
-      padding: 2rem;
       max-width: 800px;
       margin: auto;
+      padding: 2rem 1rem;
     }
 
     .poem {
-      background-color: #fff0e5;
-      border-left: 5px solid #d4a373;
-      padding: 1.5rem;
+      border-left: 4px solid var(--accent);
+      padding-left: 1rem;
       margin-bottom: 2rem;
-      border-radius: 8px;
-      box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
     }
 
     .poem h2 {
-      margin-top: 0;
+      margin-bottom: 0.5rem;
       font-size: 1.8rem;
-      color: #a0522d;
+      font-weight: 500;
     }
 
     .poem p {
-      white-space: pre-line;
       font-size: 1.1rem;
-      line-height: 1.6;
+      white-space: pre-line;
+    }
+
+    section {
+      margin-bottom: 3rem;
+    }
+
+    #about, #contact {
+      border-top: 1px solid var(--border);
+      padding-top: 1.5rem;
     }
 
     footer {
       text-align: center;
-      padding: 1rem;
-      background-color: #fce5cd;
-      color: #7b4b35;
+      padding: 2rem 1rem;
+      border-top: 1px solid var(--border);
       font-size: 0.9rem;
+      color: var(--accent);
     }
   </style>
 </head>
@@ -106,8 +127,8 @@
     <section id="about">
       <h2>About</h2>
       <p>
-        Graceful Verses is a cozy collection of poems inspired by faith, warmth, and quiet joy. 
-        Whether you're seeking peace, praise, or just a moment to reflect, may these words be a light to your path.
+        Graceful Verses is a curated selection of poems that reflect themes of peace, faith, and gentle contemplation. 
+        Each verse is crafted to bring light and stillness into the reader's day.
       </p>
     </section>
 
