--- a/index.html
+++ b/index.html
@@ -134,123 +134,170 @@
     </section>
   </div>
 <div class="sheep-container">
-  <div class="sheep">
-    <div class="body"></div>
-    <div class="head">
-      <div class="eye"></div>
-      <div class="ear"></div>
-    </div>
-    <div class="legs">
-      <div class="leg"></div>
-      <div class="leg"></div>
-      <div class="leg"></div>
-      <div class="leg"></div>
-    </div>
-  </div>
-</div>
-  <style>
- /* Animation Keyframes */
-@keyframes walk-across {
-  0% {
+<style>
+  @keyframes hop {
+    0% {
+      transform: translateY(0) translateX(0);
+    }
+    25% {
+      transform: translateY(-30px) translateX(25vw);
+    }
+    50% {
+      transform: translateY(0) translateX(50vw);
+    }
+    75% {
+      transform: translateY(-30px) translateX(75vw);
+    }
+    100% {
+      transform: translateY(0) translateX(100vw);
+    }
+  }
+
+  .sheep {
+    position: fixed;
+    bottom: 40px;
     left: -100px;
-    transform: translateY(0);
+    width: 120px;
+    height: 100px;
+    animation: hop 10s ease-in-out infinite;
+    z-index: 9999;
   }
-  50% {
-    transform: translateY(-10px);
+
+  .sheep::before,
+  .sheep::after,
+  .sheep .fluff,
+  .sheep .head,
+  .sheep .eye,
+  .sheep .smile,
+  .sheep .ear,
+  .sheep .tail,
+  .sheep .leg {
+    content: '';
+    position: absolute;
   }
-  100% {
-    left: 100%;
-    transform: translateY(0);
+
+  .sheep .body {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 0 0 2px #ccc;
+    top: 10px;
+    left: 20px;
   }
-}
 
-/* Sheep Container */
-.sheep-container {
-  position: fixed;
-  bottom: 30px;
-  left: -100px;
-  width: 100px;
-  height: 80px;
-  animation: walk-across 20s linear infinite;
-  z-index: 9999;
-}
+  .sheep .fluff-1 {
+    width: 30px;
+    height: 30px;
+    top: 0;
+    left: 20px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 0 0 2px #ccc;
+  }
 
-/* Sheep Body */
-.sheep {
-  position: relative;
-  width: 60px;
-  height: 40px;
-  background: white;
-  border-radius: 50%;
-  box-shadow: 0 0 0 3px #ccc inset;
-}
+  .sheep .fluff-2 {
+    width: 25px;
+    height: 25px;
+    top: 5px;
+    left: 50px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 0 0 2px #ccc;
+  }
 
-/* Sheep Head */
-.head {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  background: #333;
-  border-radius: 50%;
-  top: 8px;
-  left: -18px;
-}
+  .sheep .fluff-3 {
+    width: 20px;
+    height: 20px;
+    top: 25px;
+    left: 0px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 0 0 2px #ccc;
+  }
 
-/* Eye */
-.eye {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  background: white;
-  border-radius: 50%;
-  top: 7px;
-  left: 7px;
-}
+  .sheep .head {
+    width: 35px;
+    height: 35px;
+    background: #333;
+    border-radius: 50%;
+    top: 35px;
+    left: -10px;
+    z-index: 2;
+  }
 
-/* Ear */
-.ear {
-  position: absolute;
-  width: 6px;
-  height: 10px;
-  background: #333;
-  border-radius: 50%;
-  top: 5px;
-  left: -4px;
-}
+  .sheep .eye {
+    width: 8px;
+    height: 8px;
+    background: white;
+    border-radius: 50%;
+    top: 10px;
+    left: 8px;
+  }
 
-/* Legs */
-.legs {
-  position: absolute;
-  bottom: -8px;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
+  .sheep .smile {
+    width: 10px;
+    height: 5px;
+    border-bottom: 2px solid white;
+    border-radius: 50%;
+    top: 20px;
+    left: 10px;
+  }
 
-.leg {
-  width: 6px;
-  height: 12px;
-  background: #333;
-  border-radius: 3px;
-}
+  .sheep .ear {
+    width: 8px;
+    height: 12px;
+    background: #333;
+    border-radius: 50%;
+    top: 8px;
+    left: -6px;
+  }
+
+  .sheep .tail {
+    width: 15px;
+    height: 15px;
+    background: white;
+    border-radius: 50%;
+    top: 40px;
+    left: 95px;
+    box-shadow: 0 0 0 2px #ccc;
+  }
+
+  .sheep .leg {
+    width: 8px;
+    height: 20px;
+    background: #333;
+    bottom: 0;
+    border-radius: 4px;
+  }
+
+  .sheep .leg1 { left: 30px; }
+  .sheep .leg2 { left: 45px; }
+  .sheep .leg3 { left: 60px; }
+  .sheep .leg4 { left: 75px; }
 </style>
+  <div class="sheep">
+  <div class="body"></div>
+  <div class="fluff-1"></div>
+  <div class="fluff-2"></div>
+  <div class="fluff-3"></div>
+
+  <div class="head">
+    <div class="eye"></div>
+    <div class="smile"></div>
+    <div class="ear"></div>
+  </div>
+
+  <div class="tail"></div>
+
+  <div class="leg leg1"></div>
+  <div class="leg leg2"></div>
+  <div class="leg leg3"></div>
+  <div class="leg leg4"></div>
+</div>
   <footer>
     &copy; 2025 Franswoosh. All rights reserved.
   </footer>
-  </footer>
-</body>
-<a href="2index.html" style="
-  display: inline-block;
-  background-color: #fce5cd;
-  color: #7b4b35;
-  padding: 0.5rem 1.2rem;
-  border-radius: 12px;
-  text-decoration: none;
-  font-family: 'Georgia', serif;
-  font-weight: bold;
-  box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
-  transition: background-color 0.3s ease;
-" onmouseover="this.style.backgroundColor='#ffe6d0'" onmouseout="this.style.backgroundColor='#fce5cd'">
-  ✨ Poems ✨
 </a>
 </html>
