--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
     left: 0;
     transform: translateY(-50%);
   }
+  <div class="basketball"></div>
 </style>
     </footer>
     &copy; 2025 Franswoosh. All rights reserved.
