--- a/index.html
+++ b/index.html
@@ -138,16 +138,23 @@
     0% {
       left: -100px;
       bottom: 40px;
+      animation-timing-function: ease-in;
     }
-    25% {
-      bottom: 120px;
+    20% {
+      bottom: 140px; /* higher bounce */
+      animation-timing-function: ease-out;
     }
-    50% {
-      left: 50vw;
-      bottom: 40px;
+    40% {
+      bottom: 60px; /* lower bounce */
+      animation-timing-function: ease-in;
     }
-    75% {
-      bottom: 120px;
+    60% {
+      bottom: 130px; /* medium bounce */
+      animation-timing-function: ease-out;
+    }
+    80% {
+      bottom: 70px; /* lower bounce */
+      animation-timing-function: ease-in;
     }
     100% {
       left: 100vw;
@@ -161,11 +168,13 @@
     bottom: 40px;
     width: 60px;
     height: 60px;
-    background: orange;
+    background: radial-gradient(circle at 30% 30%, #ff7f00, #cc5500 80%);
     border-radius: 50%;
     border: 3px solid #cc6600;
-    box-shadow: inset -4px -4px 0 #cc6600;
-    animation: bounce-across 6s ease-in-out infinite;
+    box-shadow:
+      inset -6px -6px 8px #cc6600,
+      inset 6px 6px 10px #ffb347;
+    animation: bounce-across 4s linear infinite;
     z-index: 9999;
   }
 
@@ -174,29 +183,64 @@
   .basketball::after {
     content: '';
     position: absolute;
-    background: #cc6600;
+    background: #663300;
     border-radius: 50%;
   }
 
-  /* Vertical line */
+  /* Vertical curved line */
   .basketball::before {
-    width: 3px;
+    width: 5px;
     height: 100%;
     left: 50%;
     top: 0;
-    transform: translateX(-50%);
+    transform: translateX(-50%) rotate(15deg);
+    box-shadow: 1px 0 1px #996633;
   }
 
-  /* Horizontal curve line */
+  /* Horizontal curved line */
   .basketball::after {
     width: 100%;
-    height: 3px;
+    height: 5px;
     top: 50%;
     left: 0;
-    transform: translateY(-50%);
+    transform: translateY(-50%) rotate(15deg);
+    box-shadow: 0 1px 1px #996633;
+  }
+
+  /* Add two more curved lines for realism */
+  .basketball .line1,
+  .basketball .line2 {
+    content: '';
+    position: absolute;
+    border: 3px solid #663300;
+    border-radius: 50%;
+    box-shadow: 0 0 3px #996633;
+  }
+
+  .basketball .line1 {
+    width: 35px;
+    height: 60px;
+    left: 12px;
+    top: 0;
+    border-color: transparent #663300 transparent #663300;
+    transform: rotate(25deg);
+  }
+
+  .basketball .line2 {
+    width: 35px;
+    height: 60px;
+    right: 12px;
+    top: 0;
+    border-color: transparent #663300 transparent #663300;
+    transform: rotate(-25deg);
   }
 </style>
-  <div class="basketball"></div>
+
+<div class="basketball">
+  <div class="line1"></div>
+  <div class="line2"></div>
+</div>
+
     </footer>
     &copy; 2025 Franswoosh. All rights reserved.
   </footer>
