--- a/index.html
+++ b/index.html
@@ -133,28 +133,27 @@
       <p>@fran.swoosh</p>
     </section>
   </div>
+
 <style>
   @keyframes bounce-across {
     0% {
       left: -100px;
       bottom: 40px;
-      animation-timing-function: ease-in;
     }
-    20% {
-      bottom: 140px; /* higher bounce */
-      animation-timing-function: ease-out;
+    10% {
+      bottom: 140px;
     }
-    40% {
-      bottom: 60px; /* lower bounce */
-      animation-timing-function: ease-in;
+    30% {
+      bottom: 40px;
     }
-    60% {
-      bottom: 130px; /* medium bounce */
-      animation-timing-function: ease-out;
+    50% {
+      bottom: 140px;
     }
-    80% {
-      bottom: 70px; /* lower bounce */
-      animation-timing-function: ease-in;
+    70% {
+      bottom: 40px;
+    }
+    90% {
+      bottom: 140px;
     }
     100% {
       left: 100vw;
@@ -174,71 +173,55 @@
     box-shadow:
       inset -6px -6px 8px #cc6600,
       inset 6px 6px 10px #ffb347;
-    animation: bounce-across 4s linear infinite;
+    animation: bounce-across 5s ease-in-out infinite;
     z-index: 9999;
   }
 
-  /* Basketball lines */
+  /* Classic basketball lines */
+  /* Use pseudo-elements for lines */
+
+  /* Two curved vertical parallel lines */
   .basketball::before,
   .basketball::after {
     content: '';
     position: absolute;
-    background: #663300;
-    border-radius: 50%;
+    width: 6px;
+    height: 80%;
+    top: 10%;
+    border: 3px solid transparent;
+    border-left-color: #663300;
+    border-right-color: #663300;
+    border-radius: 30% / 50%;
   }
 
-  /* Vertical curved line */
   .basketball::before {
-    width: 5px;
-    height: 100%;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%) rotate(15deg);
+    left: 15%;
+    transform: rotate(15deg);
     box-shadow: 1px 0 1px #996633;
   }
 
-  /* Horizontal curved line */
   .basketball::after {
-    width: 100%;
-    height: 5px;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%) rotate(15deg);
-    box-shadow: 0 1px 1px #996633;
+    right: 15%;
+    transform: rotate(-15deg);
+    box-shadow: 1px 0 1px #996633;
   }
 
-  /* Add two more curved lines for realism */
-  .basketball .line1,
-  .basketball .line2 {
-    content: '';
+  /* Curved horizontal line */
+  .basketball .horizontal-line {
     position: absolute;
+    width: 80%;
+    height: 6px;
+    top: 50%;
+    left: 10%;
     border: 3px solid #663300;
-    border-radius: 50%;
-    box-shadow: 0 0 3px #996633;
-  }
-
-  .basketball .line1 {
-    width: 35px;
-    height: 60px;
-    left: 12px;
-    top: 0;
-    border-color: transparent #663300 transparent #663300;
-    transform: rotate(25deg);
-  }
-
-  .basketball .line2 {
-    width: 35px;
-    height: 60px;
-    right: 12px;
-    top: 0;
-    border-color: transparent #663300 transparent #663300;
-    transform: rotate(-25deg);
+    border-radius: 50% / 100%;
+    box-shadow: 0 1px 1px #996633;
+    transform: translateY(-50%);
   }
 </style>
 
 <div class="basketball">
-  <div class="line1"></div>
-  <div class="line2"></div>
+  <div class="horizontal-line"></div>
 </div>
 
     </footer>
