--- a/index.html
+++ b/index.html
@@ -138,14 +138,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smooth Reversing Basketball</title>
+  <title>Scrolling Page with Bouncing Basketball</title>
   <style>
     body {
       margin: 0;
       background-color: #f0f0f0;
-      overflow: hidden;
-      height: 100vh;
-      position: relative;
+      font-family: sans-serif;
+    }
+
+    .content {
+      padding: 2rem;
+      max-width: 600px;
+      margin: auto;
     }
 
     .ball {
@@ -154,7 +158,7 @@
       background-image: url('https://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png');
       background-size: cover;
       background-position: center;
-      position: absolute;
+      position: fixed;
       bottom: 10px;
       left: 0;
       display: flex;
@@ -164,6 +168,7 @@
       cursor: pointer;
       user-select: none;
       animation: bounce 1s infinite ease-in-out;
+      z-index: 1000;
     }
 
     .ball.face {
@@ -176,19 +181,28 @@
         transform: translateY(0);
       }
       50% {
-        transform: translateY(-40px);
+        transform: translateY(-30px);
       }
     }
   </style>
 </head>
 <body>
+
+  <div class="content">
+    <h1>My Scrollable Page</h1>
+    <p>Scroll down to see the bouncing basketball still at the bottom of the screen.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pretium nulla vel lorem euismod, sed facilisis nisi dignissim.</p>
+    <p style="height: 2000px;">(Imagine lots of content here...)</p>
+    <p>Bottom of the page!</p>
+  </div>
+
   <div class="ball" id="ball" onclick="replaceWithFace(this)"></div>
 
   <script>
     const ball = document.getElementById('ball');
     let pos = 0;
-    let direction = 1; // 1 = right, -1 = left
-    const speed = 1.5; // pixels per frame
+    let direction = 1;
+    const speed = 1.2;
 
     function moveBall() {
       const screenWidth = window.innerWidth;
@@ -196,7 +210,6 @@
 
       pos += speed * direction;
 
-      // Reverse direction when hitting edge
       if (pos + ballWidth >= screenWidth || pos <= 0) {
         direction *= -1;
       }
@@ -213,9 +226,6 @@
       element.textContent = '😊';
     }
   </script>
-</body>
-</html>
-
 </body>
 </html>
 
