--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
       </p>
     </section>
 
+ <section class="poem">
+      <h2>Poem 3 Title</h2>
+      <p>
+        Here would be my third poem.
+      </p>
+    </section>
+
+    
     <section id="about">
       <h2>About</h2>
       <p>
