--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
     <section class="poem">
       <h2>Poem 2 Title</h2>
       <p>
-        Here would be my second poem.
+        Boom. Grrr.
       </p>
     </section>
 
  <section class="poem">
       <h2>Poem 3 Title</h2>
       <p>
-        Here would be my third poem.
+        Bang. AAAHHH. lol.
       </p>
     </section>
 
